--- a/admin/bookings.html
+++ b/admin/bookings.html
@@ -22,10 +22,8 @@
             </div>
 
             <ul class="nav-menu">
-                <li class="nav-item">
-
+                <li class="nav-item ">
                     <a href="dashboard.html" class="nav-link" data-section="dashboard">
-
                         <i class="nav-icon fas fa-th-large"></i>
                         Dashboard
                     </a>
@@ -44,6 +42,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="vehicle_management.html" class="nav-link" data-section="vehicle-management">
+
                         <i class="nav-icon fas fa-car"></i>
                         Vehicle Management
                     </a>
@@ -76,6 +75,9 @@
                     <div class="admin-info">
                         <p class="admin-name">Admin User</p>
                         <p class="admin-email">admin@park.com</p>
+                    </div>
+                    <div class="logout-button" id="logout-button">
+                        <i class="fas fa-sign-out-alt"></i>
                     </div>
                 </div>
             </div>
@@ -168,6 +170,10 @@
     </div>
     <script type="module" src="../admin/js/bookings.js"></script>
     <script src="../public/js/headerScript.js"></script>
+    <script type="module" src="js/realtime-alerts.js"></script>
+        <script type="module" src="js/auth.js"></script>
+
+
 </body>
 
 </html>
