--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -43,7 +43,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="vehicle-management.html" class="nav-link" data-section="vehicle-management">
+                    <a href="vehicle_management.html" class="nav-link" data-section="vehicle-management">
 
                         <i class="nav-icon fas fa-car"></i>
                         Vehicle Management
@@ -369,6 +369,7 @@
 
     <script type="module" src="js/dashboard.js"></script>
     <script type="module" src="js/realtime-alerts.js"></script>
+    <script type="module" src="js/auth.js"></script>
 
 </body>
 
