--- a/admin/notifications.html
+++ b/admin/notifications.html
@@ -27,50 +27,64 @@
                 <h2 class="logo">ParkNex</h2>
                 <p class="logo-subtitle">Parking Management</p>
             </div>
+
             <ul class="nav-menu">
-                <li class="nav-item">
+                <li class="nav-item ">
                     <a href="dashboard.html" class="nav-link" data-section="dashboard">
-                        <i class="nav-icon fas fa-th-large"></i> Dashboard
+                        <i class="nav-icon fas fa-th-large"></i>
+                        Dashboard
                     </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item ">
                     <a href="bookings.html" class="nav-link" data-section="bookings">
-                        <i class="nav-icon fas fa-calendar-alt"></i> Bookings
+                        <i class="nav-icon fas fa-calendar-alt"></i>
+                        Bookings
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="report-index.html" class="nav-link" data-section="reports">
-                        <i class="nav-icon fas fa-file-alt"></i> Reports
+                        <i class="nav-icon fas fa-file-alt"></i>
+                        Reports
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="vehicle-management.html" class="nav-link" data-section="vehicle-management">
-                        <i class="nav-icon fas fa-car"></i> Vehicle Management
+                    <a href="vehicle_management.html" class="nav-link" data-section="vehicle-management">
+
+                        <i class="nav-icon fas fa-car"></i>
+                        Vehicle Management
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="slot-management.html" class="nav-link" data-section="slot-management">
-                        <i class="nav-icon fas fa-plus"></i> Slot Management
+                        <i class="nav-icon fas fa-plus"></i>
+                        Slot Management
                     </a>
                 </li>
                 <li class="nav-item active">
                     <a href="notifications.html" class="nav-link" data-section="notifications">
                         <i class="nav-icon fas fa-bell"></i>
-                        <span>Notifications</span>
+                        Notifications
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="settings.html" class="nav-link" data-section="settings">
-                        <i class="nav-icon fas fa-cog"></i> Settings
+                        <i class="nav-icon fas fa-cog"></i>
+                        Settings
                     </a>
                 </li>
             </ul>
+
             <div class="sidebar-footer">
                 <div class="admin-profile">
-                    <div class="admin-avatar"><i class="fas fa-user"></i></div>
+                    <div class="admin-avatar">
+                        <i class="fas fa-user"></i>
+                    </div>
                     <div class="admin-info">
                         <p class="admin-name">Admin User</p>
                         <p class="admin-email">admin@park.com</p>
+                    </div>
+                    <div class="logout-button" id="logout-button">
+                        <i class="fas fa-sign-out-alt"></i>
                     </div>
                 </div>
             </div>
@@ -158,6 +172,8 @@
     <!-- Firebase SDKs and custom scripts -->
     <script type="module" src="js/notifications.js"></script>
     <script type="module" src="js/realtime-alerts.js"></script>
+        <script type="module" src="js/auth.js"></script>
+
 
 </body>
 
