--- a/admin/report-index.html
+++ b/admin/report-index.html
@@ -18,71 +18,72 @@
   <div class="dashboard">
     <!-- Sidebar -->
     <nav class="sidebar">
-      <div class="sidebar-header">
-        <h2 class="logo">ParkNex</h2>
-        <p class="logo-subtitle">Parking Management</p>
-      </div>
+            <div class="sidebar-header">
+                <h2 class="logo">ParkNex</h2>
+                <p class="logo-subtitle">Parking Management</p>
+            </div>
 
-      <ul class="nav-menu">
-        <li class="nav-item ">
-          <a href="dashboard.html" class="nav-link" data-section="dashboard">
-            <i class="nav-icon fas fa-th-large"></i>
-            Dashboard
-          </a>
-        </li>
-        <li class="nav-item ">
-          <a href="bookings.html" class="nav-link" data-section="bookings">
-            <i class="nav-icon fas fa-calendar-alt"></i>
-            Bookings
-          </a>
-        </li>
-        <li class="nav-item active">
-          <a href="report-index.html" class="nav-link" data-section="reports">
-            <i class="nav-icon fas fa-file-alt"></i>
-            Reports
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="vehicle_management.html" class="nav-link" data-section="vehicle-management">
-            <i class="nav-icon fas fa-car"></i>
-            Vehicle Management
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="slot-management.html" class="nav-link" data-section="slot-management">
-            <i class="nav-icon fas fa-plus"></i>
-            Slot Management
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="notifications.html" class="nav-link" data-section="notifications">
-            <i class="nav-icon fas fa-bell"></i>
-            Notifications
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="settings.html" class="nav-link" data-section="settings">
-            <i class="nav-icon fas fa-cog"></i>
-            Settings
-          </a>
-        </li>
-      </ul>
+            <ul class="nav-menu">
+                <li class="nav-item ">
+                    <a href="dashboard.html" class="nav-link" data-section="dashboard">
+                        <i class="nav-icon fas fa-th-large"></i>
+                        Dashboard
+                    </a>
+                </li>
+                <li class="nav-item ">
+                    <a href="bookings.html" class="nav-link" data-section="bookings">
+                        <i class="nav-icon fas fa-calendar-alt"></i>
+                        Bookings
+                    </a>
+                </li>
+                <li class="nav-item active">
+                    <a href="report-index.html" class="nav-link" data-section="reports">
+                        <i class="nav-icon fas fa-file-alt"></i>
+                        Reports
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="vehicle_management.html" class="nav-link" data-section="vehicle-management">
 
-      <div class="sidebar-footer">
-        <div class="admin-profile">
-          <div class="admin-avatar">
-            <i class="fas fa-user"></i>
-          </div>
-          <div class="admin-info">
-            <p class="admin-name">Admin User</p>
-            <p class="admin-email">admin@park.com</p>
-          </div>
-          <div class="logout-button" id="logout-button">
-            <i class="fas fa-sign-out-alt"></i>
-          </div>
-        </div>
-      </div>
-    </nav>
+                        <i class="nav-icon fas fa-car"></i>
+                        Vehicle Management
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="slot-management.html" class="nav-link" data-section="slot-management">
+                        <i class="nav-icon fas fa-plus"></i>
+                        Slot Management
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="notifications.html" class="nav-link" data-section="notifications">
+                        <i class="nav-icon fas fa-bell"></i>
+                        Notifications
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="settings.html" class="nav-link" data-section="settings">
+                        <i class="nav-icon fas fa-cog"></i>
+                        Settings
+                    </a>
+                </li>
+            </ul>
+
+            <div class="sidebar-footer">
+                <div class="admin-profile">
+                    <div class="admin-avatar">
+                        <i class="fas fa-user"></i>
+                    </div>
+                    <div class="admin-info">
+                        <p class="admin-name">Admin User</p>
+                        <p class="admin-email">admin@park.com</p>
+                    </div>
+                    <div class="logout-button" id="logout-button">
+                        <i class="fas fa-sign-out-alt"></i>
+                    </div>
+                </div>
+            </div>
+        </nav>
 
     <!-- Main Content -->
     <main class="main-content">
@@ -147,6 +148,8 @@
   <script type="module" src="js/report-script.js"></script>
   <script src="../public/js/headerScript.js"></script>
   <script type="module" src="js/realtime-alerts.js"></script>
+      <script type="module" src="js/auth.js"></script>
+
 
 </body>
 
