--- a/admin/settings.html
+++ b/admin/settings.html
@@ -22,46 +22,45 @@
             </div>
 
             <ul class="nav-menu">
-                <li class="nav-item">
-
+                <li class="nav-item ">
                     <a href="dashboard.html" class="nav-link" data-section="dashboard">
-
                         <i class="nav-icon fas fa-th-large"></i>
                         Dashboard
                     </a>
                 </li>
                 <li class="nav-item ">
-                    <a href="#" class="nav-link" data-section="bookings">
+                    <a href="bookings.html" class="nav-link" data-section="bookings">
                         <i class="nav-icon fas fa-calendar-alt"></i>
                         Bookings
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link" data-section="reports">
+                    <a href="report-index.html" class="nav-link" data-section="reports">
                         <i class="nav-icon fas fa-file-alt"></i>
                         Reports
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link" data-section="vehicle-management">
+                    <a href="vehicle_management.html" class="nav-link" data-section="vehicle-management">
+
                         <i class="nav-icon fas fa-car"></i>
                         Vehicle Management
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link" data-section="slot-management">
+                    <a href="slot-management.html" class="nav-link" data-section="slot-management">
                         <i class="nav-icon fas fa-plus"></i>
                         Slot Management
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link" data-section="notifications">
+                    <a href="notifications.html" class="nav-link" data-section="notifications">
                         <i class="nav-icon fas fa-bell"></i>
                         Notifications
                     </a>
                 </li>
                 <li class="nav-item active">
-                    <a href="#" class="nav-link" data-section="settings">
+                    <a href="settings.html" class="nav-link" data-section="settings">
                         <i class="nav-icon fas fa-cog"></i>
                         Settings
                     </a>
@@ -76,6 +75,9 @@
                     <div class="admin-info">
                         <p class="admin-name">Admin User</p>
                         <p class="admin-email">admin@park.com</p>
+                    </div>
+                    <div class="logout-button" id="logout-button">
+                        <i class="fas fa-sign-out-alt"></i>
                     </div>
                 </div>
             </div>
