--- a/admin/vehicle_management.html
+++ b/admin/vehicle_management.html
@@ -34,13 +34,13 @@
             </div>
 
             <ul class="nav-menu">
-                <li class="nav-item">
+                <li class="nav-item ">
                     <a href="dashboard.html" class="nav-link" data-section="dashboard">
                         <i class="nav-icon fas fa-th-large"></i>
                         Dashboard
                     </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item ">
                     <a href="bookings.html" class="nav-link" data-section="bookings">
                         <i class="nav-icon fas fa-calendar-alt"></i>
                         Bookings
@@ -54,6 +54,7 @@
                 </li>
                 <li class="nav-item active">
                     <a href="vehicle_management.html" class="nav-link" data-section="vehicle-management">
+
                         <i class="nav-icon fas fa-car"></i>
                         Vehicle Management
                     </a>
@@ -86,6 +87,9 @@
                     <div class="admin-info">
                         <p class="admin-name">Admin User</p>
                         <p class="admin-email">admin@park.com</p>
+                    </div>
+                    <div class="logout-button" id="logout-button">
+                        <i class="fas fa-sign-out-alt"></i>
                     </div>
                 </div>
             </div>
@@ -370,6 +374,8 @@
 
     <script type="module" src="js/vm.js"></script>
     <script type="module" src="js/realtime-alerts.js"></script>
+        <script type="module" src="js/auth.js"></script>
+
 
 </body>
 
